avoid flickering

--- a/projects/storefrontstyles/scss/components/product/search/_searchbox.scss
+++ b/projects/storefrontstyles/scss/components/product/search/_searchbox.scss
@@ -34,7 +34,8 @@
   }
 
   &:before {
-    transition: background-color 0.4s;
+    transition: opacity 0.4s;
+
     content: '';
     position: fixed;
     left: 0;
